--- a/UFO-level-1/StarterCode/index.html
+++ b/UFO-level-1/StarterCode/index.html
@@ -32,7 +32,7 @@
             <div class="panel panel-default">
               <div class="panel-heading">Filter Search</div>
               <div class="panel-body">
-                <form>
+                <form id = "my-form">
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
@@ -49,7 +49,7 @@
         </div>
         <div class="col-md-10">
           <div id="table-area" class="">
-            <table id="ufo-table" class="table table-striped">
+            <table id="ufo-table" class="table table-striped" style="text-align:center">
               <thead>
                 <tr>
                   <th class="table-head">Date</th>
@@ -61,7 +61,8 @@
                   <th class="table-head">Comments</th>
                 </tr>
               </thead>
-              <tbody></tbody>
+              <tbody id="infotodisplay">              
+              </tbody>
             </table>
           </div>
         </div>
